# libwave

./: .clang-format  .gitignore  CMakeLists.txt
libwave/: AudioFile.h  AudioFileBase.cpp  AudioFileBase.h  AudioFileTypeEraser.h  AudioFileUtil.cpp  AudioFileUtil.h  CMakeLists.txt  DefaultNormalization.h  ScalarNormalization.h  TypeTag.h
libwave/wave/: AlawWaveFile.cpp  AlawWaveFile.h  Fact.h  Fmt.h  G711WaveFile.h  Int12WaveFile.h  OffsetAndSize.h  RiffHeader.h  UncompressedWaveFile.h  UnknownChunk.h  WaveAudioFile.h  WaveFileBase.cpp  WaveFileBase.h  WaveFileUtil.cpp  WaveFileUtil.h  WaveFormat.h  alaw.h  g711.h
waveplayer/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  PortAudioOutputStream.h  waveplayer.cpp
wplayer/: CMakeLists.txt  wplayer.cpp
