find_package(PkgConfig)
if (${PKG_CONFIG_FOUND})
  pkg_check_modules(PORTAUDIOCPP_STATIC portaudiocpp QUIET)
  if (${PORTAUDIOCPP_FOUND})
    message(STATUS "Adding waveplayer executable")
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_STANDARD_REQUIRED On)
    add_executable(waveplayer waveplayer.cpp AudioStream.cpp)
    target_link_libraries(waveplayer wave ${PORTAUDIOCPP_LIBRARIES})
    target_include_directories(waveplayer PRIVATE ${PORTAUDIOCPP_INCLUDE_DIRS})
    target_link_directories(waveplayer PRIVATE ${PORTAUDIOCPP_LIBRARY_DIRS})
  endif()
endif ()
